@@ -40,6 +40,9 @@ Other changes in Shorewall 4.1.3.
 2)  The error message has been improved when a non-root user attempts
     "shorewall show capabilities".
 
+3)  Shorewall-perl now generates fatal error conditions when there are
+    no IPv4 zones defined and when there are no interfaces defined.
+
 Migration Issues.
 
 1)  Previously, when HIGH_ROUTE_MARKS=Yes, Shorewall allowed non-zero
