@@ -12,6 +12,8 @@ Changes in 4.1.3
 
 6)  Add better diagnostic when not running as root.
 
+7)  Detect lack of interfaces and IPv4 zones.
+
 Changes in 4.1.2
 
 1)  Enhanced Operational Logging
